--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^7.0.0",
+    "axios": "^1.4.0",
     "client": "file:",
     "postcss-scss": "^4.0.6",
     "react": "^17.0.2",
