--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -39,12 +39,20 @@
   },
   "dependencies": {
     "@svgr/webpack": "^7.0.0",
+    "@tanstack/react-query": "^4.29.7",
+    "@trpc/client": "^10.27.1",
+    "@trpc/react-query": "^10.27.1",
+    "@trpc/server": "^10.27.1",
+    "@types/js-cookie": "^3.0.3",
     "axios": "^1.4.0",
     "client": "file:",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "postcss-scss": "^4.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "usehooks-ts": "^2.9.1"
   }
 }
