--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -48,6 +48,7 @@
     "client": "file:",
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
+    "moment": "^2.29.4",
     "postcss-scss": "^4.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
