--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "firebase": "^9.22.1",
     "http": "^0.0.1-security",
     "http-proxy": "^1.18.1",
     "jimp": "^0.16.2",
