--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev index.ts"
+    "start": "ts-node-dev ./src/index.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.241.0",
