--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,6 +19,7 @@
     "@types/express-session": "^1.17.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.7.18",
+    "@types/nodemailer": "^6.4.8",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
     "@types/redis": "^4.0.11",
@@ -34,11 +35,13 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "firebase": "^9.22.1",
+    "googleapis": "^118.0.0",
     "http": "^0.0.1-security",
     "http-proxy": "^1.18.1",
     "jimp": "^0.16.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "prisma": "^4.3.1",
