--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev ./src/index.ts"
+    "start": "ts-node-dev ./src/index.ts",
+    "test": "dotenv -e .env.sample -- jest -i"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.241.0",
@@ -32,12 +33,14 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "dotenv-cli": "^7.2.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "firebase": "^9.22.1",
     "googleapis": "^118.0.0",
     "http": "^0.0.1-security",
     "http-proxy": "^1.18.1",
+    "jest": "^29.5.0",
     "jimp": "^0.16.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
@@ -55,8 +58,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.1",
     "redis": "^4.5.1",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.4.4"
