--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -42,6 +42,7 @@
     "http-proxy": "^1.18.1",
     "jest": "^29.5.0",
     "jimp": "^0.16.2",
+    "js-base64": "^3.7.5",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
